# API-AutotestMCP

./: .gitignore  AI_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/api_test_mcp/: __init__.py  config.py  logic.py  models.py  server.py  utils.py
tests/: conftest.py  test_logic.py  test_parsing.py
