[project]
name = "api-test-mcp"
version = "0.1.0"
description = "MCP server for automated API testing and client simulation"
authors = [
    {name = "Antigravity", email = "antigravity@google.com"}
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.10"

[project.scripts]
api-test-mcp = "api_test_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_test_mcp"]
