[project]
name = "api-test-mcp"
version = "1.2.0"
description = "MCP server for automated API testing and client simulation"
authors = [
    {name = "Antigravity", email = "antigravity@google.com"}
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.2",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0"
]

[project.scripts]
api-test-mcp = "api_test_mcp.server:main"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "pip install build && python -m build"

# Generate CHANGELOG.md
[tool.semantic_release.changelog]
exclude_commit_patterns = ["chore: release.*"]

# Create git release tag
[tool.semantic_release.git]
commit_message = "chore(release): {version}"

# Publish settings
[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_test_mcp"]
